--- a/ODE-IVP/stability/Project.toml
+++ b/ODE-IVP/stability/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
